--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -1,6 +1,7 @@
 # Introduction
 
-max was here 
+max was here
+lauren was here <3
 This is the introduction to the Physical Activites trajectory paper. 
 
 Exercise, which is often associated with positive mental and physical health outcomes in the general population [@penedoExerciseWellbeingReview2005; @chekroudAssociationPhysicalExercise2018; @deslandesExerciseMentalHealth2009], can also become maladaptive, particularly in the context of disordered eating [@dittmerCompulsiveExerciseEating2018; @dallegraveCompulsiveExerciseControl2008]. Though definitions of maladaptive exercise vary and many terms have been used to describe this behavior, a broad conceptualization of maladaptive exercise includes exercise that exhibits one or more of the following qualities: a) exercise that is driven or compulsive in nature, b) feelings of distress or guilt arise when an individual is unable to exercise, c) exercise that interferes with one's ability to engage in school, work, or daily activities, d) the inability to refrain from exercise despite circumstances (e.g. illness, injury) in which it is not recommended [@gorrellPsychosocialEtiologyMaladaptive2021; @scharmerCompulsiveExerciseExercise2020; @dittmerCompulsiveExerciseEating2018]. Such experiences most often arise when individuals also report a primary motivation for engaging in exercise related to weight loss [@scharmerCompulsiveExerciseExercise2020; @zmijewskiExerciseDependenceAttitudes2003]. Most concerning, maladaptive exercise may be an early indicator of disordered eating behavior, as retrospective reports of individuals with eating disorders suggest that maladaptive exercise can be an early-developing eating disorder feature [@stiles-shieldsDrivenExerciseTreatmentseeking2011; @davisRolePhysicalActivity1994]. Further, our previous prospective study in the Avon Longitudinal Study of Parents and Children (ALSPAC) indicated that young people who reported either exercise for weight loss or maladaptive exercise at age 14 were also more likely to report higher concurrent and future (Age 16) eating disorder behaviors [@schaumbergProspectiveAssociationsDriven2022], highlighting the potential etiological relevance of this behavior. Once entrenched, problematic exercise patterns can be a pernicious and debilitating eating disorder symptom and a potential marker of poor prognosis [@brosofExploringContributionExercise2020; @dallegraveCompulsiveExerciseControl2008; @monellRunningEmptyNationwide2018; @solenbergerExerciseEatingDisorders2001]. Amongst individuals with eating disorders, maladaptive (and, more specifically, driven and compulsive) exercise is a commonly-reported feature of illness, with a national clinical eating disorder database estimating that this transdiagnostic symptom is present in approximately half of all eating disorder patients presenting to tretament [@monellRunningEmptyNationwide2018]. 
