--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -1,10 +1,10 @@
 # Introduction
 
-max was here
-lauren was here <3
-This is the introduction to the Physical Activites trajectory paper. 
+max was here lauren was here \<3 This is the introduction to the Physical Activites trajectory paper.
 
-Exercise, which is often associated with positive mental and physical health outcomes in the general population [@penedoExerciseWellbeingReview2005; @chekroudAssociationPhysicalExercise2018; @deslandesExerciseMentalHealth2009], can also become maladaptive, particularly in the context of disordered eating [@dittmerCompulsiveExerciseEating2018; @dallegraveCompulsiveExerciseControl2008]. Though definitions of maladaptive exercise vary and many terms have been used to describe this behavior, a broad conceptualization of maladaptive exercise includes exercise that exhibits one or more of the following qualities: a) exercise that is driven or compulsive in nature, b) feelings of distress or guilt arise when an individual is unable to exercise, c) exercise that interferes with one's ability to engage in school, work, or daily activities, d) the inability to refrain from exercise despite circumstances (e.g. illness, injury) in which it is not recommended [@gorrellPsychosocialEtiologyMaladaptive2021; @scharmerCompulsiveExerciseExercise2020; @dittmerCompulsiveExerciseEating2018]. Such experiences most often arise when individuals also report a primary motivation for engaging in exercise related to weight loss [@scharmerCompulsiveExerciseExercise2020; @zmijewskiExerciseDependenceAttitudes2003]. Most concerning, maladaptive exercise may be an early indicator of disordered eating behavior, as retrospective reports of individuals with eating disorders suggest that maladaptive exercise can be an early-developing eating disorder feature [@stiles-shieldsDrivenExerciseTreatmentseeking2011; @davisRolePhysicalActivity1994]. Further, our previous prospective study in the Avon Longitudinal Study of Parents and Children (ALSPAC) indicated that young people who reported either exercise for weight loss or maladaptive exercise at age 14 were also more likely to report higher concurrent and future (Age 16) eating disorder behaviors [@schaumbergProspectiveAssociationsDriven2022], highlighting the potential etiological relevance of this behavior. Once entrenched, problematic exercise patterns can be a pernicious and debilitating eating disorder symptom and a potential marker of poor prognosis [@brosofExploringContributionExercise2020; @dallegraveCompulsiveExerciseControl2008; @monellRunningEmptyNationwide2018; @solenbergerExerciseEatingDisorders2001]. Amongst individuals with eating disorders, maladaptive (and, more specifically, driven and compulsive) exercise is a commonly-reported feature of illness, with a national clinical eating disorder database estimating that this transdiagnostic symptom is present in approximately half of all eating disorder patients presenting to tretament [@monellRunningEmptyNationwide2018]. 
+Katherine is making a citation here [@schaumbergAnxietyDisorderSymptoms2018]
+
+Exercise, which is often associated with positive mental and physical health outcomes in the general population [@penedoExerciseWellbeingReview2005; @chekroudAssociationPhysicalExercise2018; @deslandesExerciseMentalHealth2009], can also become maladaptive, particularly in the context of disordered eating [@dittmerCompulsiveExerciseEating2018; @dallegraveCompulsiveExerciseControl2008]. Though definitions of maladaptive exercise vary and many terms have been used to describe this behavior, a broad conceptualization of maladaptive exercise includes exercise that exhibits one or more of the following qualities: a) exercise that is driven or compulsive in nature, b) feelings of distress or guilt arise when an individual is unable to exercise, c) exercise that interferes with one's ability to engage in school, work, or daily activities, d) the inability to refrain from exercise despite circumstances (e.g. illness, injury) in which it is not recommended [@gorrellPsychosocialEtiologyMaladaptive2021; @scharmerCompulsiveExerciseExercise2020; @dittmerCompulsiveExerciseEating2018]. Such experiences most often arise when individuals also report a primary motivation for engaging in exercise related to weight loss [@scharmerCompulsiveExerciseExercise2020; @zmijewskiExerciseDependenceAttitudes2003]. Most concerning, maladaptive exercise may be an early indicator of disordered eating behavior, as retrospective reports of individuals with eating disorders suggest that maladaptive exercise can be an early-developing eating disorder feature [@stiles-shieldsDrivenExerciseTreatmentseeking2011; @davisRolePhysicalActivity1994]. Further, our previous prospective study in the Avon Longitudinal Study of Parents and Children (ALSPAC) indicated that young people who reported either exercise for weight loss or maladaptive exercise at age 14 were also more likely to report higher concurrent and future (Age 16) eating disorder behaviors [@schaumbergProspectiveAssociationsDriven2022], highlighting the potential etiological relevance of this behavior. Once entrenched, problematic exercise patterns can be a pernicious and debilitating eating disorder symptom and a potential marker of poor prognosis [@brosofExploringContributionExercise2020; @dallegraveCompulsiveExerciseControl2008; @monellRunningEmptyNationwide2018; @solenbergerExerciseEatingDisorders2001]. Amongst individuals with eating disorders, maladaptive (and, more specifically, driven and compulsive) exercise is a commonly-reported feature of illness, with a national clinical eating disorder database estimating that this transdiagnostic symptom is present in approximately half of all eating disorder patients presenting to tretament [@monellRunningEmptyNationwide2018].
 
 Given the risks associated with maladaptive exercise patterns and the potential etiologic relevance of exercise behavior the context of eating disorders, clarification regarding both the prevalence of and early predictors of high-risk exercise behavior during adolescence could build knowledge necessary to prevent maladaptive exercise patterns from taking hold. Previous research highlights several potential predictors of maladaptive exercise in young people, including, at a social level: pressures to conform to body image ideals [@reynoldsSocioculturalInfluencesCompulsive2022], at a psychological level: weight and shape concerns, negative affect, thinnness expectations [@gorrellPsychosocialEtiologyMaladaptive2021], and, at a biolgoical level: genetic risk for obsessive-compulsive disorder and/or anorexia nervosa [@yilmazPredictingEatingDisorder2022].
 
@@ -26,7 +26,6 @@ H1b: Transitions between the maladaptive exercise and exercise for weight loss c
 
 H2a: We hypothesize that the prevalence of exercise for weight loss and maladaptive exercise will show modest increases with age, reflecting transition through peak age of onset for eating disorders during late adolescence.
 
-H2b: We have no directional hypotheses regarding parent SES or Age 13 BMI as predictors of maladaptive exercise. 
+H2b: We have no directional hypotheses regarding parent SES or Age 13 BMI as predictors of maladaptive exercise.
 
 H2c: We hypothesize that ED cognitions at age 14 will predict maladaptive exercise and exercise for weight loss across adolescent and young adult development, with strongest prediction at most proximal timepoints.
-
