--- a/packages.bib
+++ b/packages.bib
@@ -42,8 +42,8 @@
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2022},
-  note = {R package version 1.0.8},
+  year = {2021},
+  note = {R package version 1.0.7},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
@@ -106,7 +106,7 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
-  note = {R package version 1.37},
+  note = {R package version 1.33},
   url = {https://yihui.org/knitr/},
 }
 
@@ -114,15 +114,15 @@
   title = {labelled: Manipulating Labelled Data},
   author = {Joseph Larmarange},
   year = {2021},
-  note = {R package version 2.9.0},
+  note = {R package version 2.8.0},
   url = {http://larmarange.github.io/labelled/},
 }
 
 @Manual{R-lme4,
   title = {lme4: Linear Mixed-Effects Models using Eigen and S4},
   author = {Douglas Bates and Martin Maechler and Ben Bolker and Steven Walker},
-  year = {2022},
-  note = {R package version 1.1-29},
+  year = {2021},
+  note = {R package version 1.1-27.1},
   url = {https://github.com/lme4/lme4/},
 }
 
@@ -217,9 +217,9 @@ mice},
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham and Maximilian Girlich},
-  year = {2022},
-  note = {R package version 1.2.0},
+  author = {Hadley Wickham},
+  year = {2021},
+  note = {R package version 1.1.4},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
@@ -227,7 +227,7 @@ mice},
   title = {usethis: Automate Package and Project Setup},
   author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett},
   year = {2021},
-  note = {R package version 2.1.5},
+  note = {R package version 2.1.0},
   url = {https://CRAN.R-project.org/package=usethis},
 }
 
