--- a/03-Method_Measures.Rmd
+++ b/03-Method_Measures.Rmd
@@ -105,3 +105,6 @@ The presence of maladaptive exercise in this study was defined as exercising for
 #### Exercise Gropus
 
 Exericse groups over time are defined for descriptive analyses and transition states, replicating groups defined in @schaumbergProspectiveAssociationsDriven2022. Those who report no exericse for weight loss at each time point are placed in a 'No Exercise for Weight Loss' group, those who report exercise for weight loss at least sometimes, but do not meet criteria for maladaptive exercise are placed in an 'Exercise for Weight Loss' group, and those meeting maladaptive exercise criteria are placed in the 'Maladaptive Exercise' group.
+
+#### Eating Disorder Behaviors
+
